k8s/07-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pick-a-meet
  namespace: pick-a-meet
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pick-a-meet
  ports:
    - name: http
      port: 8000
      targetPort: http
