k8s/08-httproute.example.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pick-a-meet
  namespace: pick-a-meet
spec:
  parentRefs:
    - name: CHANGE_ME_GATEWAY_NAME
      namespace: CHANGE_ME_GATEWAY_NAMESPACE
  hostnames:
    - CHANGE_ME_PICK_A_MEET_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pick-a-meet
          port: 8000
